data/rq3/c1/intermediate/shared__541f4e547bdb/workspace/final_projects/shared__541f4e547bdb/translate_by_qwen3_coder/.c2r_bindgen_extern/service_status_93b9a1bb.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn HdfSbufWriteUint16(sbuf: *mut HdfSBuf, value: u16) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufWriteString(sbuf: *mut HdfSBuf, value: *const ::core::ffi::c_char) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufReadUint16(sbuf: *mut HdfSBuf, value: *mut u16) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufReadString(sbuf: *mut HdfSBuf) -> *const ::core::ffi::c_char;
}
